# storage-proofs-poc

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  bun.lockb  package.json  patch.mjs
poc/: proof.ts  shapes.ts  test-proofs.ts  verify.ts
poc/eth2/: proof.ts  test-proofs.ts  verify.ts
src/: lib.rs  verify.rs
